# spl-coverage-map

./: .gitignore  README.md  coverage.json  pyproject.toml  requirements.txt
.github/workflows/: generate.yml
coverage_map/: __main__.py  navigator.py  parser.py
tests/: test_navigator.py  test_parser_markdown.py
